Documentation of AppManager

--- a/Doxygen Documentation/html/inherits.html
+++ b/Doxygen Documentation/html/inherits.html
@@ -71,7 +71,7 @@ $(function() {
 <tr><td><img src="inherit_graph_0.png" border="0" usemap="#aThoughts_8AppManager" alt=""/>
 <map name="aThoughts_8AppManager" id="aThoughts_8AppManager">
 <area shape="rect" title=" " alt="" coords="5,259,116,285"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html" title=" " alt="" coords="237,5,389,32"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html" title="Object that must be kept always alive while running the app. It initializes the game process and keep..." alt="" coords="237,5,389,32"/>
 <area shape="rect" href="classThoughts_1_1ControlSystems_1_1CameraController.html" title=" " alt="" coords="175,56,451,83"/>
 <area shape="rect" href="classThoughts_1_1ControlSystems_1_1ControlSystem.html" title=" " alt="" coords="182,107,445,133"/>
 <area shape="rect" href="classThoughts_1_1ControlSystems_1_1InputHandler.html" title=" " alt="" coords="189,157,437,184"/>
