--- a/Doxygen Documentation/html/classThoughts_1_1Game_1_1GameMap_1_1Map.html
+++ b/Doxygen Documentation/html/classThoughts_1_1Game_1_1GameMap_1_1Map.html
@@ -158,8 +158,8 @@ Here is the caller graph for this function:</div>
 <area shape="rect" title=" " alt="" coords="1185,5,1492,32"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameMap_1_1Map.html#ad4009688d0199fe4b581542a1ff933fb" title=" " alt="" coords="872,5,1137,32"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameManager.html#a8d515fc1b62a4b466a2247ed1f6cee46" title=" " alt="" coords="529,5,824,32"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title=" " alt="" coords="237,5,481,32"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title=" " alt="" coords="5,5,189,32"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title="Starts a new game by instantiating the GameManager prefab and triggering its method &quot;StartNewGame&quot;" alt="" coords="237,5,481,32"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title="Triggers the start of a new game." alt="" coords="5,5,189,32"/>
 </map>
 </div>
 
@@ -203,8 +203,8 @@ Here is the caller graph for this function:</div>
 <map name="aclassThoughts_1_1Game_1_1GameMap_1_1Map_ad4009688d0199fe4b581542a1ff933fb_icgraph" id="aclassThoughts_1_1Game_1_1GameMap_1_1Map_ad4009688d0199fe4b581542a1ff933fb_icgraph">
 <area shape="rect" title=" " alt="" coords="872,5,1137,32"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameManager.html#a8d515fc1b62a4b466a2247ed1f6cee46" title=" " alt="" coords="529,5,824,32"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title=" " alt="" coords="237,5,481,32"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title=" " alt="" coords="5,5,189,32"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title="Starts a new game by instantiating the GameManager prefab and triggering its method &quot;StartNewGame&quot;" alt="" coords="237,5,481,32"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title="Triggers the start of a new game." alt="" coords="5,5,189,32"/>
 </map>
 </div>
 
@@ -253,8 +253,8 @@ Here is the caller graph for this function:</div>
 <area shape="rect" title=" " alt="" coords="1185,5,1520,32"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameMap_1_1Map.html#ad4009688d0199fe4b581542a1ff933fb" title=" " alt="" coords="872,5,1137,32"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameManager.html#a8d515fc1b62a4b466a2247ed1f6cee46" title=" " alt="" coords="529,5,824,32"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title=" " alt="" coords="237,5,481,32"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title=" " alt="" coords="5,5,189,32"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title="Starts a new game by instantiating the GameManager prefab and triggering its method &quot;StartNewGame&quot;" alt="" coords="237,5,481,32"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title="Triggers the start of a new game." alt="" coords="5,5,189,32"/>
 </map>
 </div>
 
@@ -302,8 +302,8 @@ Here is the caller graph for this function:</div>
 <area shape="rect" title=" " alt="" coords="1185,5,1481,32"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameMap_1_1Map.html#ad4009688d0199fe4b581542a1ff933fb" title=" " alt="" coords="872,5,1137,32"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameManager.html#a8d515fc1b62a4b466a2247ed1f6cee46" title=" " alt="" coords="529,5,824,32"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title=" " alt="" coords="237,5,481,32"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title=" " alt="" coords="5,5,189,32"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title="Starts a new game by instantiating the GameManager prefab and triggering its method &quot;StartNewGame&quot;" alt="" coords="237,5,481,32"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title="Triggers the start of a new game." alt="" coords="5,5,189,32"/>
 </map>
 </div>
 
@@ -394,8 +394,8 @@ Here is the caller graph for this function:</div>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameMap_1_1Map.html#a4244c867225274151d92f26abc3a0f58" title=" " alt="" coords="1568,56,1867,83"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameMap_1_1Map.html#ad4009688d0199fe4b581542a1ff933fb" title=" " alt="" coords="872,31,1137,57"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameManager.html#a8d515fc1b62a4b466a2247ed1f6cee46" title=" " alt="" coords="529,31,824,57"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title=" " alt="" coords="237,31,481,57"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title=" " alt="" coords="5,31,189,57"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title="Starts a new game by instantiating the GameManager prefab and triggering its method &quot;StartNewGame&quot;" alt="" coords="237,31,481,57"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title="Triggers the start of a new game." alt="" coords="5,31,189,57"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameMap_1_1Map.html#a8c4dde8a39e3986ab204f349ce8633b4" title=" " alt="" coords="1185,56,1520,83"/>
 </map>
 </div>
@@ -453,8 +453,8 @@ Here is the caller graph for this function:</div>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameMap_1_1Map.html#a4244c867225274151d92f26abc3a0f58" title=" " alt="" coords="1568,56,1867,83"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameMap_1_1Map.html#ad4009688d0199fe4b581542a1ff933fb" title=" " alt="" coords="872,31,1137,57"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameManager.html#a8d515fc1b62a4b466a2247ed1f6cee46" title=" " alt="" coords="529,31,824,57"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title=" " alt="" coords="237,31,481,57"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title=" " alt="" coords="5,31,189,57"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title="Starts a new game by instantiating the GameManager prefab and triggering its method &quot;StartNewGame&quot;" alt="" coords="237,31,481,57"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title="Triggers the start of a new game." alt="" coords="5,31,189,57"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameMap_1_1Map.html#a8c4dde8a39e3986ab204f349ce8633b4" title=" " alt="" coords="1185,56,1520,83"/>
 </map>
 </div>
@@ -521,8 +521,8 @@ Here is the caller graph for this function:</div>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameMap_1_1Map.html#a8c4dde8a39e3986ab204f349ce8633b4" title=" " alt="" coords="1185,5,1520,32"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameMap_1_1Map.html#ad4009688d0199fe4b581542a1ff933fb" title=" " alt="" coords="872,5,1137,32"/>
 <area shape="rect" href="classThoughts_1_1Game_1_1GameManager.html#a8d515fc1b62a4b466a2247ed1f6cee46" title=" " alt="" coords="529,5,824,32"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title=" " alt="" coords="237,5,481,32"/>
-<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title=" " alt="" coords="5,5,189,32"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#aa6b4098e23afcb973848216e995e00ae" title="Starts a new game by instantiating the GameManager prefab and triggering its method &quot;StartNewGame&quot;" alt="" coords="237,5,481,32"/>
+<area shape="rect" href="classThoughts_1_1AppManager.html#a0bb22cc2b3cc5aa16c793157c0bef3b1" title="Triggers the start of a new game." alt="" coords="5,5,189,32"/>
 </map>
 </div>
 
